# goit-python-web-homework-08

./: README.md
email_sender/: pyproject.toml  requirements.txt
email_sender/email_sender/: config_db.ini  config_rabbit.ini  connect_db.py  connect_rebbit.py  consumer.py  models.py  producer.py
quotation_book/: pyproject.toml  requirements.txt
quotation_book/quotation_book/: connect.py  insert_to_db.py  models.py  search.py
